Se cambio el archivo de configuracion de eslint para agregar la ejecucion de test y build

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -6,14 +6,25 @@ on:
             - main
 
 jobs:
-    simple_deployment_pipeline_job_build:
+    build_and_test_deployment_pipeline_job:
         runs-on: ubuntu-latest
         steps:
-            - uses: actions/checkout@v5
-            - uses: actions/setup-node@v6
+            - name: Checkout code 
+              uses: actions/checkout@v5
+            
+            - name: Set up Node.js
+              uses: actions/setup-node@v6
               with:
                 node-version: '22'
+            
             - name: Install dependencies
               run: npm install
+            
             - name: Check style (Lint)
               run: npm run eslint
+            
+            - name: Run tests
+              run: npm run test
+            
+            - name: Build project
+              run: npm run build
