--- a/package.json
+++ b/package.json
@@ -3,14 +3,15 @@
   "version": "1.0.0",
   "type": "module",
   "description": "Full Stack Open",
-  "main": "src/index.js",
   "scripts": {
-    "start": "webpack-dev-server --open --mode development",
-    "start-prod": "node app.js",
+    "start:frontend": "cd frontend && webpack serve --config webpack.config.cjs --mode development",
+    "build": "cd frontend && webpack serve --config webpack.config.cjs --mode production",
+    "start:backend": "node backend/app.js",
+    "start-prod": "node backend/app.js",
     "test": "jest",
     "test:e2e": "playwright test",
-    "eslint": "eslint './**/*.{js,jsx}'",
-    "build": "webpack --mode production"
+    "eslint": "eslint frontend/src/**/*.jsx backend/**/*.js",
+    "save-version": "sh scripts/save_version.sh"
   },
   "repository": {
     "type": "git",
@@ -26,7 +27,7 @@
   },
   "homepage": "https://github.com/smartlyio/fullstackopen-cicd#readme",
   "devDependencies": {
-    "@babel/core": "^7.23.7",
+    "@babel/core": "^7.28.5",
     "@babel/plugin-transform-runtime": "^7.28.5",
     "@babel/preset-env": "^7.28.5",
     "@babel/preset-react": "^7.28.5",
@@ -34,7 +35,7 @@
     "@testing-library/jest-dom": "^6.2.0",
     "@testing-library/react": "^14.1.2",
     "babel-jest": "^29.7.0",
-    "babel-loader": "^9.1.3",
+    "babel-loader": "^9.2.1",
     "css-loader": "^6.8.1",
     "eslint": "^8.56.0",
     "eslint-plugin-jest": "^27.6.1",
@@ -51,9 +52,11 @@
   },
   "dependencies": {
     "axios": "^1.6.5",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.21.1"
+    "react-router-dom": "^6.21.1",
+    "resolve": "^1.22.11"
   }
 }
