--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "start:frontend": "cd frontend && webpack serve --config webpack.config.cjs --mode development",
     "start:backend": "node backend/app.js",
     "start-prod": "node backend/app.js",
-    "build": "cd frontend && webpack serve --config webpack.config.cjs --mode production",
+    "build": "cd frontend && webpack --config webpack.config.cjs --mode production",
     "test": "jest",
-    "test:e2e": "playwright test",
+    "test:e2e": "npm run build:frontend && playwright test",
     "eslint": "eslint frontend/src/**/*.jsx backend/**/*.js",
     "save-version": "sh scripts/save_version.sh"
   },
